@@ -7,6 +7,9 @@
 					http://gollem.swi.psy.uva.nl/bugzilla/
 					--------------------------------------
 
+  * FIXED: Turn error messages produced	by format/[1-3] into proper
+    exceptions.  Dima.
+
   * ADDED: predicate_property/2: `nodebug' to detect predicates without
     debug info.  Used by the guitracer.
 
